raw implementation of basic scope

--- a/index.html
+++ b/index.html
@@ -3,12 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width = device-width, initial-scale=1"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="src/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="src/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="src/img/favicon/favicon-16x16.png">
   <title>speakit</title>
-  <link rel="icon" href="http://icons.iconarchive.com/icons/cjdowner/cryptocurrency/256/ICON-icon.png">
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
+<div class="intro">
+  <h1 class="intro__heading">Speakit</h1>
+  <p class="intro__paragraph">Click on the words to hear their sound</p>
+  <p class="intro__paragraph">Press the button and say the words to check your pronunciation</p>
+  <button class="button intro__button">start</button>
+</div>
 <main class="main">
+  <div class="content">
+    <ul class="cards-container">
+      <li class="scene">
+        <img class="scene__image">
+        <p class="scene__translation"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+      <li class="card">
+        <p class="card__word"></p>
+        <p class="card__transcription"></p>
+      </li>
+    </ul>
+  </div>
   <audio class="audio" src=""></audio>
 </main>
 <script type="text/javascript" src="script.js"></script>
