feat: implement page/level choise

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <p class="intro__paragraph">Press the button and say the words to check your pronunciation</p>
   <button class="button intro__button">start</button>
 </div>
+<header class="header">
+  <label class="header__label header__label_level">level <span class="header__text header__text_level">1</span>
+    <input class="header__range header__range_level" type="range" step="1" min="1" max="6" value="1">
+  </label>
+  <label class="header__label header__label_pack">card pack <span class="header__text header__text_pack">1</span>
+    <input class="header__range header__range_pack" type="range" step="1" min="1" max="30" value="1">
+  </label>
+</header>
 <main class="main">
   <div class="content">
     <ul class="cards-container">
