feat: raw implementation of speech recognition game logic

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 </header>
 <main class="main">
   <div class="content">
+    <span class="content__points"> </span>
     <ul class="cards-container">
       <li class="scene">
-        <img class="scene__image">
+        <img class="scene__image" alt="image" src="./src/img/question-mark.png">
         <p class="scene__translation"></p>
       </li>
       <li class="card">
@@ -72,6 +73,7 @@
         <p class="card__transcription"></p>
       </li>
     </ul>
+    <button class="button content__button content__button_speak">speak</button>
   </div>
   <audio class="audio" src=""></audio>
 </main>
